--- a/@unedit/difftree/tsconfig.json
+++ b/@unedit/difftree/tsconfig.json
@@ -1,1 +1,10 @@
-{ "extends": "../../tsconfig.json", "compilerOptions": { "rootDir": "src", "outDir": "dist" } }
+{
+    "extends": "../../tsconfig.json",
+    "compilerOptions": {
+        "rootDir": "src",
+        "outDir": "dist"
+    },
+    "exclude": [
+        "dist"
+    ]
+}
